--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -9,3 +9,9 @@ entrypoint = "./functions/send-invitation-email/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/send-invitation-email/*.html" ]
+
+[functions.razorpay-payment]
+enabled = true
+verify_jwt = false
+import_map = "./functions/razorpay-payment/deno.json"
+entrypoint = "./functions/razorpay-payment/index.ts"
