refactor: modularize payment engine for better maintainability
- Split monolithic 1955-line payment engine into 7 focused modules
- Reduce main index.ts from 1955 to 249 lines (87% reduction)
- Create modular structure:
  * types.ts - Centralized type definitions
  * calculations.ts - Core mathematical functions
  * date-utils.ts - Date conversion and generation
  * partial-payments.ts - Partial payment logic
  * status-management.ts - Status derivation and enrichment
  * business-logic.ts - Core fee structure generation
  * index.ts - Main entry point and routing

Benefits:
- Improved maintainability and readability
- Better testability with isolated modules
- Clear separation of concerns
- Easier debugging and development
- Preserved all existing functionality
- No breaking API changes

Includes comprehensive README documentation for the new architecture.

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -15,3 +15,9 @@ enabled = true
 verify_jwt = false
 import_map = "./functions/razorpay-payment/deno.json"
 entrypoint = "./functions/razorpay-payment/index.ts"
+
+[functions.payment-engine]
+enabled = true
+verify_jwt = false
+import_map = "./functions/payment-engine/deno.json"
+entrypoint = "./functions/payment-engine/index.ts"
