--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.2",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.12",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
