Fix Webflow sync field mapping and add comprehensive logging
- Fix field mapping to handle different Webflow field names (Full Name, Email ID, Phone No., etc.)
- Add enhanced debug logging to show available fields and extracted values
- Implement robust field extraction with fallback mechanism
- Add detailed error logging for failed submissions
- Fix phone field validation to allow empty values with default
- Add singleton pattern for WebflowService to maintain sync logs
- Add download sync logs functionality with JSON export
- Update TypeScript types to include status field for database constraint
- Fix case block declarations and TypeScript warnings
- Fix missing closing brace in switch statement

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -23,4 +23,9 @@ verify_jwt = false
 import_map = "./functions/payment-engine/deno.json"
 entrypoint = "./functions/payment-engine/index.ts"
 
+[functions.webflow-enquiry-webhook]
+enabled = true
+verify_jwt = false
+import_map = "./functions/webflow-enquiry-webhook/deno.json"
+entrypoint = "./functions/webflow-enquiry-webhook/index.ts"
 
